samples/_failures_safe/1761542329_8aaba3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f844963.c: In function ‘print_menu’:
./samples/SAFE/__tmp_3f844963.c:153:11: error: expected ‘;’ at end of input
  153 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_3f844963.c:153:5: error: expected declaration or statement at end of input
  153 |     printf
      |     ^~~~~~
